feat: convert project to typescript

--- a/package.json
+++ b/package.json
@@ -2,10 +2,25 @@
   "name": "mathml2asciimathjs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf dist/ && tsc"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "he": "^1.2.0",
+    "jsdom": "^24.0.0"
+  },
+  "devDependencies": {
+    "@types/jsdom": "^21.1.6",
+    "typescript": "^5.4.2"
+  },
+  "keywords": [
+    "mathml",
+    "asciimath",
+    "convert",
+    "translate"
+  ]
 }
