--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist/ && tsc"
+    "build": "rm -rf dist/ && tsc",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "jsdom": "^24.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/jsdom": "^21.1.6",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
@@ -23,6 +25,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.2"
   },
   "keywords": [
